# CudaRoad

./: .gitmodules  README.md
cuda_graph/: CMakeLists.txt  README.md  build-for-debug.sh
cuda_graph/1_check_async_engine/: CMakeLists.txt
cuda_graph/2_multi_cuda_stream/: CMakeLists.txt
cuda_graph/3_measure_cuda_event/: CMakeLists.txt  measure_cuda_event.cu
cuda_graph/4_capture_cuda_graph/: CMakeLists.txt  capture_cuda_graph.cu
cuda_graph/5_cuda_memory_no_graph/: CMakeLists.txt  cuda_memory_no_graph.cu
cuda_graph/6_cuda_memory_use_graph/: CMakeLists.txt  cuda_memory_use_graph.cu
hardware_tools/: CMakeLists.txt  CMakePresets.json  README.md  build-for-debug.sh
hardware_tools/1_reduce_global_memory/: CMakeLists.txt  reduce_global_memory.cu
hardware_tools/2_gpu_compute_capability/: README.md
hardware_tools/3_gpu_bandwidth/: README.md
hardware_tools/4_gpu_wrap_divergence/: README.md
hardware_tools/5_gpu_band_conflict/: README.md
hardware_tools/6_gpu_wrap_shuffle/: README.md
reduce_case/: .gitmodules  CMakeLists.txt  README.md  build-for-debug.sh
reduce_case/0_prepare_env/: CMakeLists.txt
reduce_case/1_cuda_reduce_study/: CMakeLists.txt  build-for-debug.sh  reduce_v0_global_memory.cu
reduce_case/1_reduce_global_memory/: CMakeLists.txt  reduce_global_memory.cu
reduce_case/1_reduce_v0_global_memory/: CMakeLists.txt  reduce_v0_global_memory.cu
reduce_case/2_reduce_shared_memory/: CMakeLists.txt
reduce_case/3_reduce_no_divergence_branch/: CMakeLists.txt  reduce_no_divergence_branch.cu
reduce_case/4_reduce_no_bank_conflict/: CMakeLists.txt  reduce_no_bank_conflict.cu
reduce_case/5_reduce_add_during_load_PlanA/: CMakeLists.txt  reduce_add_during_load_PlanA.cu
reduce_case/6_reduce_add_during_load_PlanB/: CMakeLists.txt  reduce_add_during_load_PlanB.cu
reduce_case/7_reduce_unroll_last_dim/: CMakeLists.txt  reduce_unroll_last_dim.cu
reduce_case/8_reduce_complete_unroll/: CMakeLists.txt  reduce_complete_unroll.cu
sgemm_case/: CMakeLists.txt  CMakePresets.json  README.md  build-for-debug.sh
sgemm_case/1_sgemm_global_memory/: CMakeLists.txt  README.md  sgemm_global_memory.cu  sgemm_v0_global_memory.cu
sgemm_case/2_sgemm_shared_memory/: CMakeLists.txt  README.md  sgemm_shared_memory.cu
sgemm_case/3_sgemm_shared_memory_sliding_window/: CMakeLists.txt  README.md  sgemm_shared_memory_sliding_window.cu
